Separate paged from unpaged in TransactionController
